@@ -1,5 +1,11 @@
 2011-08-19  Anders Carlsson  <andersca@apple.com>
 
+        Fix Windows build.
+
+        * WebProcess/Plugins/PluginController.h:
+
+2011-08-19  Anders Carlsson  <andersca@apple.com>
+
         Make the complex text input state a tri-state enum instead of a boolean
         https://bugs.webkit.org/show_bug.cgi?id=62245
 
